fixing new button mobile styles

--- a/src/style/site.css
+++ b/src/style/site.css
@@ -248,8 +248,10 @@ body {
   transition: 500ms opacity, 100ms transform;
 }
 
-.learn-more .ctn__container {
+.learn-more .cta__container {
   display: flex;
+  justify-content: center;
+  min-width: 250px;
 }
 
 .learn-more .cta {
@@ -277,6 +279,17 @@ body {
 .learn-more .cta:hover {
   transform: scale(1.2);
 }
+@media only screen and (max-width: 768px) {
+  .learn-more .cta__container {
+    flex-direction: column;
+  } 
+
+  .learn-more .cta:not(:last-child) {
+    margin-right: 0px;
+    margin-bottom: 10px;
+  }
+}
+
 .learn-more .social {
   margin-top: 120px;
 }
